6.1.0
- Added support for Emun default values.

6.0.0
- Added class meta analysis for class names in strings.
- Added a hint to the 'unknown' getter analysis result.
- Added container handling to the getter analysis.
- Added a unit of measurement to the benchmarking.
- Added better readability to the exception analysis.
- Added delegate handling to the getter analysis.
- Added the declaration place to the getter analysis.
- Added error info when analysing an XML string.
- Change: The scalar analysis classes are now reused.
- Change: Renamed the language fallback key from 'text' to 'en'.
- Change: Dropped PHP 7.2 and 7.3 support.
- Change: Removed deprecated code.
- Change: Use json_validate() if available to determine if a
  string is a json string.
- Change: Simplified the routing process.
- Change: Removed some literals.
- Change: Some deprecations.
- Change: Only use byRef when absolutely necessary.
- Change: We do not filter the file path anymore.
- Change: Moved some frontend literals to the translations.
- Change: Split the getter analysis into several smaller classes.
- Change: Removed deprecations from the unit tests.
- Change: Deprecated the exception handler.
- Change: Updated to UnitTest 11.4
- Change: Use the encoding service to encode comments.
- Change: Introduced a static cache to the string mimetype analysis.
- Change: Use an SVG in both skins for the kreXX logo.
- Change: Both skins have the child nodes aligned for better
  readability.

5.0.12
- Bugfix: Prevent get_object_vars() from triggering a fatal in a
  faulty property hook.

5.0.11
- Bugfix: Do not run out of memory when escaping very large strings.
- Bugfix: Minimise the interference from the hosting CMS styles.
- Bugfix: Missing hidden property support for DatetimeImmutable.

5.0.10
- Bugfix: Remove all Unicode chars from the generated CSS for the
  smokygrey skin, because the TYPO3 asset collector does not
  support them anymore.

5.0.9